[gd_scene load_steps=3 format=3 uid="uid://bhw4xnmgqewkd"]

[ext_resource type="Script" uid="uid://dv8g47t0hpdnt" path="res://scripts/rogue/rogue_level_scene.gd" id="1_4nxwf"]
[ext_resource type="Texture2D" uid="uid://tmm6eht7wilt" path="res://scenes/map/background4.png" id="2_vbdm3"]

[node name="RogueLevelScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nxwf")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("2_vbdm3")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 30.0
offset_right = 1150.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 60
text = "无火的牌局 - 随机模式"
horizontal_alignment = 1

[node name="LevelInfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 120.0
offset_right = 1200.0
offset_bottom = 250.0

[node name="LevelName" type="Label" parent="LevelInfoPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 10.0
offset_right = 350.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "关卡名称"
horizontal_alignment = 1

[node name="LevelDescription" type="Label" parent="LevelInfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -20.0
offset_right = 350.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "关卡描述"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DebuffPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 260.0
offset_right = 1200.0
offset_bottom = 340.0

[node name="DebuffTitle" type="Label" parent="DebuffPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_right = 350.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "全局效果"
horizontal_alignment = 1

[node name="DebuffName" type="Label" parent="DebuffPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -15.0
offset_right = 350.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "效果名称"
horizontal_alignment = 1

[node name="DebuffDescription" type="Label" parent="DebuffPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -30.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "效果描述"
horizontal_alignment = 1

[node name="EnemiesTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 350.0
offset_right = 1200.0
offset_bottom = 390.0
theme_override_font_sizes/font_size = 24
text = "本关敌人列表"
horizontal_alignment = 1

[node name="EnemiesContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 400.0
offset_right = 1200.0
offset_bottom = 700.0
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 710.0
offset_right = 950.0
offset_bottom = 770.0
theme_override_font_sizes/font_size = 30
text = "开始挑战"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 800.0
offset_right = 150.0
offset_bottom = 850.0
theme_override_font_sizes/font_size = 20
text = "返回"
